// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Usage Snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-141 makeStyles-item-139"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MyClass MuiButton-fullWidth"
      data-testid="cancel-button"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        MyLabel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Check Default Values Snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-233 makeStyles-item-231"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-fullWidth"
      data-testid="cancel-button"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Cancel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Expansion Usage Snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-233 makeStyles-item-231"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-fullWidth"
      data-testid="cancel-button"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Cancel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
